# dagitron

./: README.md  pyproject.toml  requirements.txt  setup.py
dagitron/: __init__.py  cli.py  dependencies.py  exceptions.py  factory.py  generator.py  parser.py  schema.py
examples/: complex_workflow.yaml  custom_operators.yaml  data_processing.yaml  simple_pipeline.yaml
examples/generated_dags/: simple_pipeline.py
tests/: test_cli.py  test_dependencies.py  test_factory.py  test_generator.py  test_parser.py
tests/fixtures/: invalid_dag.yaml  valid_dag.yaml
